Pre-emptive Bootstrap Add

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,13 @@
 <% provide(:title, 'Home')%>
 
-<h1>Welcome to ConOrg Home page!</h1>
+    <main role="main" class="container">
+
+      <div class="starter-template">
+
+        <h1>Welcome to ConOrg Home page!</h1>
+              
+              
+              
+        </div>
+
+    </main><!-- /.container -->
