--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,30 @@
  *= require_tree .
  *= require_self
  */
+ @import "bootstrap";
+
+ body {
+     padding-top: 5rem;
+     padding-left: 1.5rem;
+     padding-right: 1.5rem;
+   }
+ 
+ div.field{
+   padding-top: 0.5rem;
+   padding-bottom: 0.5rem;
+ }
+ 
+ div.actions{
+   padding-top: 1.5rem;
+   padding-bottom: 0.5rem;
+ }
+ 
+ 
+ label,
+ input{
+   display: block;
+ }
+ 
+ div.invalid-feedback{
+   display: block;
+ }
