Started adding pages, they may need moving as models are created for use

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
               <li class="nav-item <%= active_class(home_path) %>">
                 <%= link_to 'Home', home_path, class: 'nav-link' %>
               </li>
+              <li class="nav-item <%= active_class(eventinfo_path) %>">
+                <%= link_to 'Event Info', eventinfo_path, class: 'nav-link' %>
+              </li>
               
 <%
 =begin
