Edit and new pages added

--- a/app/views/pages/gameinfo.html.erb
+++ b/app/views/pages/gameinfo.html.erb
@@ -4,7 +4,7 @@
 
       <div class="starter-template">
 
-        <h1>Midsouth Con Schedule</h1>
+        <h1>Midsouth Gaming Information</h1>
         
         <p>
         <%= link_to "Back", schedule_path%><br>
