--- a/app/views/pages/userauth.html.erb
+++ b/app/views/pages/userauth.html.erb
@@ -4,7 +4,7 @@
 
       <div class="starter-template">
 
-        <h1>Midsouth Con Information</h1>
+        <h1>Login/Signup</h1>
         
         <p>
         <%= link_to "Home", home_path %>
