--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
       <div class="starter-template">
 
-        <h1>Welcome to ConOrg Home page!</h1>
+        <h1>Midsouth Con</h1>
               
               
               
