--- a/app/views/pages/pricinginformation.html.erb
+++ b/app/views/pages/pricinginformation.html.erb
@@ -4,7 +4,7 @@
 
       <div class="starter-template">
 
-        <h1>Midsouth Con Schedule</h1>
+        <h1>Midsouth Con Pricing</h1>
         
         <p>
         <%= link_to "Back", eventinfo_path%><br>
