--- a/app/views/dealer_forms/edit.html.erb
+++ b/app/views/dealer_forms/edit.html.erb
@@ -6,6 +6,6 @@
     <%= render 'form', user_id: @dealer_form.user.id, dealer_form: @dealer_form%>
 
 <p>
-    <%= link_to 'Back', user_path %>
+    <%= link_to 'Back', users_path %>
 </p>
 </main><!-- /.container -->
