--- a/app/views/gm_form1s/_form.html.erb
+++ b/app/views/gm_form1s/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: @gm_form1, local: true do |form| %>
-     <%= hidden_field_tag :gm_form1_id, gm_form1_id%>
+     <%= hidden_field_tag :user_id, user_id%>
     <div class="field">
         <%= form.label :first_name %>
         <%= form.text_field :first_name, class: 'form-control' %>
