--- a/app/views/registration_forms/edit.html.erb
+++ b/app/views/registration_forms/edit.html.erb
@@ -6,6 +6,6 @@
     <%= render 'form', user_id: @registration_form.user.id, registration_form: @registration_form%>
 
 <p>
-    <%= link_to 'Back', user_path %>
+    <%= link_to 'Back', users_path %>
 </p>
 </main><!-- /.container -->
