--- a/app/views/dealer_forms/new.html.erb
+++ b/app/views/dealer_forms/new.html.erb
@@ -3,9 +3,9 @@
     <h1>New Dealer Form</h1>
 
 
-    <%= render 'form', user_id: @dealer_form.user.id, dealer_form: @dealer_form%>
+    <%= render 'form', user_id: @user.id, dealer_form: @dealer_form%>
 
 <p>
-    <%= link_to 'Back', user_path %>
+    <%= link_to 'Back', users_path %>
 </p>
 </main><!-- /.container -->
