--- a/app/views/gm_form1s/new.html.erb
+++ b/app/views/gm_form1s/new.html.erb
@@ -3,9 +3,9 @@
     <h1>New GM Form 1</h1>
 
 
-    <%= render 'form', user_id: @gm_form1.user.id, gm_form1: @gm_form1%>
+    <%= render 'form', user_id: @user.id, gm_form1: @gm_form1%>
 
 <p>
-    <%= link_to 'Back', user_path %>
+    <%= link_to 'Back', users_path %>
 </p>
 </main><!-- /.container -->
