--- a/app/views/panelist_forms/_form.html.erb
+++ b/app/views/panelist_forms/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: @panelist_form, local: true do |form| %>
-     <%= hidden_field_tag :panelist_form_id, panelist_form_id%>
+     <%= hidden_field_tag :user_id, user_id %>
      <div class="field">
         <%= form.label :title %>
         <%= form.text_field :title, class: 'form-control' %>
