--- a/app/views/panelist_forms/new.html.erb
+++ b/app/views/panelist_forms/new.html.erb
@@ -3,9 +3,9 @@
     <h1>New Panelist Form</h1>
 
 
-    <%= render 'form', user_id: @panelist_form.user.id, panelist_form: @panelist_form%>
+    <%= render 'form', user_id: @user.id, panelist_form: @panelist_form%>
 
 <p>
-    <%= link_to 'Back', user_path %>
+    <%= link_to 'Back', users_path %>
 </p>
 </main><!-- /.container -->
