--- a/app/views/registration_forms/_form.html.erb
+++ b/app/views/registration_forms/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @user, local: true do |form| %>
+<%= form_with model: @registration_form, local: true do |form| %>
      <%= hidden_field_tag :user_id, user_id%>
     <div class="field">
         <%= form.label :first_name %>
