--- a/app/views/registration_forms/new.html.erb
+++ b/app/views/registration_forms/new.html.erb
@@ -3,9 +3,9 @@
     <h1>New Registration Form</h1>
 
 
-    <%= render 'form', user_id: @registration_form.user.id, registration_form: @registration_form%>
+    <%= render 'form', user_id: @user.id, registration_form: @registration_form%>
 
 <p>
-    <%= link_to 'Back', user_path %>
+    <%= link_to 'Back', users_path %>
 </p>
 </main><!-- /.container -->
