--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: @user, local: true do |form| %>
-     <%= hidden_field_tag :user_id, user_id%>
+     
     <div class="field">
         <%= form.label :first_name %>
         <%= form.text_field :first_name, class: 'form-control' %>
@@ -27,6 +27,10 @@
     <div class="field">
         <%= form.label :age %>
         <%= form.text_field :age, class: 'form-control' %>
+    </div>
+    <div class="field">
+        <%= form.label :membership_type %>
+        <%= form.text_field :membership_type, class: 'form-control' %>
     </div>
     <div class="field">
         <%= form.label :email_address %>
