--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
       <th scope="col">First Name</th>
       <th scope="col">Last Name</th>
       <th scope="col">Age</th>
-      <th scope="col">Payment</th>
+      <th scope="col">Membership</th>
       <th scope="col"></th>
     </tr>
   </thead>
@@ -18,7 +18,7 @@
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= user.age %></td>
-        <td><%= user.payment_type %></td>
+        <td><%= user.membership_type %></td>
         <td><%= link_to 'show', user_path(user)%>
         <%= link_to 'edit', edit_user_path(user)%>
         <%= link_to 'destroy', user_path(user), method: :delete %>
