--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,19 @@
       <div class="starter-template">
 
         <h1>Midsouth Con</h1>
+
+        <p>
+        <%= link_to "Login or Signup", userauth_path %>
+        </p>
+
+        <p>
+        <%= link_to "Information", eventinfo_path %>
+        </p>
+
+        <p>
+        <%= link_to "Profile Page", profilepage_path %>
+        </p>
+
               
               
               
