--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,6 +29,6 @@
   </tbody>
 </table>
 <p>
-  <%= link_to 'New User', new_user_path %> <br> 
+  <%= link_to 'Home', home_path %> <br> 
 </p>
 </main><!-- /.container -->
