--- a/app/views/gm_form2s/edit.html.erb
+++ b/app/views/gm_form2s/edit.html.erb
@@ -6,6 +6,6 @@
     <%= render 'form', user_id: @gm_form2.user.id, gm_form2: @gm_form2%>
 
 <p>
-    <%= link_to 'Back', user_path %>
+    <%= link_to 'Home', home_path %>
 </p>
 </main><!-- /.container -->
