--- a/app/views/panelist_forms/new.html.erb
+++ b/app/views/panelist_forms/new.html.erb
@@ -6,6 +6,6 @@
     <%= render 'form', user_id: @user.id, panelist_form: @panelist_form%>
 
 <p>
-    <%= link_to 'Back', users_path %>
+    <%= link_to 'Home', home_path%>
 </p>
 </main><!-- /.container -->
