--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -122,6 +122,6 @@
         </p>
 
 <p>
-    <%= link_to 'Back', users_path %>
+    <%= link_to 'Home', home_path%>
 </p>
 </main><!-- /.container -->
