Added a admin view page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,11 @@
 =end
 %>
       </div>
+
+      <div align="right">
+        <button type="button" class="btn btn-secondary btn-sm">Log-in</button>
+      </div>
+
     </nav>
 
     <% if flash[:notice] %>
