Reseated head and moved in changes

--- a/app/views/registration_forms/_form.html.erb
+++ b/app/views/registration_forms/_form.html.erb
@@ -37,6 +37,6 @@
         <%= form.text_field :coupon_codes, class: 'form-control' %>
     </div>
         <div class="actions">
-        <%= form.submit 'Update user', class: 'btn btn-primary'%>
+        <%= form.submit 'Update Registration', class: 'btn btn-primary'%>
         </div>
     <% end %>
