Minor sitemap fix

--- a/app/views/dealer_forms/index.html.erb
+++ b/app/views/dealer_forms/index.html.erb
@@ -1,6 +1,6 @@
 <main role="main" class="container">
 
-<h1>Dealer Forms</h1>
+<h1>Dealers</h1>
 
 <table class="table table-sm">
   <thead>
@@ -25,6 +25,6 @@
   </tbody>
 </table>
 <p>
-  <%= link_to 'Back', eventinfo_path %> <br> 
+  <%= link_to 'Home', home_path %> <br> 
 </p>
 </main><!-- /.container -->
