--- a/app/views/pages/gameinfo.html.erb
+++ b/app/views/pages/gameinfo.html.erb
@@ -7,7 +7,7 @@
         <h1>Midsouth Con Gaming Information</h1>
         
         <p>
-        <%= link_to "Back", schedule_path%><br>
+        <%= link_to "Schedule", schedule_path%><br>
         <%= link_to "Home", home_path %>
         </p>
               
