--- a/app/views/pages/schedule.html.erb
+++ b/app/views/pages/schedule.html.erb
@@ -52,7 +52,7 @@
               </tbody>
             </table>
             <p>
-            <%= link_to 'Back', eventinfo_path %> <br> 
+            <%= link_to 'Home', home_path %> <br> 
           </p>
         </div>
 
