--- a/app/views/gm_form2s/index.html.erb
+++ b/app/views/gm_form2s/index.html.erb
@@ -1,6 +1,6 @@
 <main role="main" class="container">
 
-<h1>Game Forms</h1>
+<h1>Games</h1>
 
 <table class="table table-sm">
   <thead>
@@ -26,6 +26,7 @@
   </tbody>
 </table>
 <p>
-  <%= link_to 'Back', eventinfo_path %> <br> 
+  <%= link_to 'Schedule', schedule_path %> <br>
+  <%= link_to 'Home', home_path %> <br> 
 </p>
 </main><!-- /.container -->
