--- a/app/views/panelist_forms/index.html.erb
+++ b/app/views/panelist_forms/index.html.erb
@@ -1,6 +1,6 @@
 <main role="main" class="container">
 
-<h1>Panelist Forms</h1>
+<h1>Panelists</h1>
 
 <table class="table table-sm">
   <thead>
@@ -25,6 +25,7 @@
   </tbody>
 </table>
 <p>
-  <%= link_to 'Back', eventinfo_path %> <br> 
+  <%= link_to 'Schedule', schedule_path %> <br>
+  <%= link_to 'Home', home_path %> <br>  
 </p>
 </main><!-- /.container -->
