--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,12 @@
         <%= flash[:alert] %>
       </div>
     <% end %>
-    
+    <% if notice %>
+      <p class="alert alert-success"><%= notice %></p>
+    <%end%>
+    <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <%end%>
     <%= yield %>
   </body>
 </html>
