--- a/app/views/pages/userauth.html.erb
+++ b/app/views/pages/userauth.html.erb
@@ -6,8 +6,12 @@
 
         <h1>Login/Signup</h1>
         <p>
-        <%= link_to 'Signup', new_user_path %> <br>
+        <%= link_to 'Signup', new_user_registration_path %> <br>
         </p>
+        <p>
+        <%= link_to 'Login', new_user_session_path %> <br>
+        </p>
+
         
         <p>
         <%= link_to "Home", home_path %>
