--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,12 +29,8 @@
         <%= form.text_field :age, class: 'form-control' %>
     </div>
     <div class="field">
-        <%= form.label :membership_type %>
-        <%= form.text_field :membership_type, class: 'form-control' %>
-    </div>
-    <div class="field">
-        <%= form.label :email_address %>
-        <%= form.text_field :email_address, class: 'form-control' %>
+        <%= form.label :email %>
+        <%= form.text_field :email, class: 'form-control' %>
     </div>
     <div class="field">
         <%= form.label :phone %>
