--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,20 +5,14 @@
 <table class="table table-sm">
   <thead>
     <tr>
-      <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
-      <th scope="col">Age</th>
-      <th scope="col">Membership</th>
+      <th scope="col">User</th>
       <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
     <% @users.each do |user| %>
     <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.age %></td>
-        <td><%= user.membership_type %></td>
+        <td><%= user.email %></td>
         <td><%= link_to 'show', user_path(user)%>
         <%= link_to 'edit', edit_user_path(user)%>
         <%= link_to 'destroy', user_path(user), method: :delete %>
