--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,9 +13,9 @@
     <% @users.each do |user| %>
     <tr>
         <td><%= user.email %></td>
-        <td><%= link_to 'show', user_path(user)%>
-        <%= link_to 'edit', edit_user_path(user)%>
+        <td><%if current_user.admin == true%>
         <%= link_to 'destroy', user_path(user), method: :delete %>
+        <%end%>
         </td>
         
     </tr>
