Finished testing dealer setup

--- a/app/views/dealer_forms/index.html.erb
+++ b/app/views/dealer_forms/index.html.erb
@@ -6,9 +6,16 @@
   <thead>
     <tr>
       <th scope="col">Name</th>
+      <th scope="col">Badge Name</th>
+      <th scope="col">Business</th>
       <th scope="col">Email</th>
+      <th scope="col">Phone</th>
       <th scope="col">Merch/Service</th>
       <th scope="col">Website</th>
+      <th scope="col">AC Needed</th>
+      <th scope="col">Total Members</th>
+      <th scope="col">Other Members</th>
+      <th scope="col">Spaces Needed</th>
       <th scope="col">Approved</th>
       <th scope="col"></th>
     </tr>
@@ -16,10 +23,18 @@
   <tbody>
     <% @dealer_forms.each do |dealer_form| %>
     <tr>
+        <td><%= dealer_form.user.first_name %> <%= dealer_form.user.last_name %></td>
+        
+        <td><%= dealer_form.badge_name %></td>
         <td><%= dealer_form.business_name %></td>
-        <td><%= dealer_form.email_address %></td>
+        <td><%= dealer_form.user.email %></td>
+        <td><%= dealer_form.user.phone %></td>
         <td><%= dealer_form.type_of_merchandise_or_service %></td>
         <td><%= dealer_form.company_website_address %></td>
+        <td><%= dealer_form.display_require_AC_power %></td>
+        <td><%= dealer_form.number_of_memberships %></td>
+        <td><%= dealer_form.list_names_ages_of_extra_members %></td>
+        <td><%= dealer_form.number_of_spaces %></td>
         <%if dealer_form.approved == true%>
         <td>Approved</td>
         <%else%>
@@ -36,7 +51,7 @@
 <table class="table table-sm">
   <thead>
     <tr>
-      <th scope="col">Name</th>
+      <th scope="col">Business</th>
       <th scope="col">Email</th>
       <th scope="col">Merch/Service</th>
       <th scope="col">Website</th>
