--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th scope="col">User</th>
+      <th scope="col">ID</th>
       <th scope="col"></th>
     </tr>
   </thead>
@@ -13,6 +14,7 @@
     <% @users.each do |user| %>
     <tr>
         <td><%= user.email %></td>
+        <td><%= user.first_name %></td>
         <td><%if current_user.admin == true%>
         <%= link_to 'destroy', user_path(user), method: :delete %>
         <%end%>
