Approval status added to models and forms

--- a/app/views/gm_form2s/_form.html.erb
+++ b/app/views/gm_form2s/_form.html.erb
@@ -32,6 +32,11 @@
         <%= form.label :games %>
         <%= form.text_field :games, class: 'form-control' %>
     </div>
+    <%if current_user.admin == true%>
+    <div class="field">
+        <%= form.label :approved %>
+        <%= form.text_field :approved, class: 'form-control' %>
+    </div>
         <div class="actions">
         <%= form.submit 'Update gm_form2', class: 'btn btn-primary'%>
         </div>
