--- a/app/views/gm_form1s/_form.html.erb
+++ b/app/views/gm_form1s/_form.html.erb
@@ -28,6 +28,11 @@
         <%= form.label :age %>
         <%= form.text_field :age, class: 'form-control' %>
     </div>
+    <%if current_user.admin == true%>
+    <div class="field">
+        <%= form.label :approved %>
+        <%= form.text_field :approved, class: 'form-control' %>
+    </div>
         <div class="actions">
         <%= form.submit 'Update gm_form1', class: 'btn btn-primary'%>
         </div>
