Made it such that only approved items to normal users

--- a/app/views/gm_form1s/index.html.erb
+++ b/app/views/gm_form1s/index.html.erb
@@ -17,8 +17,7 @@
         <td><%= gm_form1.first_name %></td>
         <td><%= gm_form1.last_name %></td>
         <td><%= gm_form1.age %></td>
-        <td><%= link_to 'show', gm_form1_path(gm_form1)%>
-        <%= link_to 'edit', edit_gm_form1_path(gm_form1)%>
+        <td><%= link_to 'edit', edit_gm_form1_path(gm_form1)%>
         <%= link_to 'destroy', gm_form1_path(gm_form1), method: :delete %>
         </td>
         
