--- a/app/views/gm_form2s/index.html.erb
+++ b/app/views/gm_form2s/index.html.erb
@@ -48,6 +48,7 @@
     <% end %>
   </tbody>
 </table>
+<%end%>
 <p>
   <%= link_to 'Schedule', schedule_path %> <br>
   <%= link_to 'Home', home_path %> <br> 
