--- a/app/views/panelist_forms/index.html.erb
+++ b/app/views/panelist_forms/index.html.erb
@@ -64,7 +64,7 @@
       <% end %>
     </tbody>
   </table>
-
+<%end%>
 <p>
   <%= link_to 'Schedule', schedule_path %> <br>
   <%= link_to 'Home', home_path %> <br>  
